# pitch.ai

./: app.py  pyproject.toml  search_utils.py  test_script.py
notebooks/: Data_Exploration.ipynb  Embedding_generation.ipynb
