[tool.poetry]
name = "pitch-ai"
version = "0.1.0"
description = "exploring some pitch data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pitch"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.6"
pandas = "^1.5.3"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
pymilvus = "2.2.1"
loguru = "^0.7.0"
matplotlib = "^3.7.1"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
